--- a/Commerce-Client/src/app/notifications/notifications.component.css
+++ b/Commerce-Client/src/app/notifications/notifications.component.css
@@ -37,10 +37,25 @@
   border-radius: 5px;
 }
 
-
-
 .btn-primary.focus{
   box-shadow: 0 0 0 0.2rem #333; 
+}
+
+.btn-outline-primary {
+  color: #495057;
+  background-color: #fff;
+  background-image: none;
+  border-color: #333;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show > .btn-outline-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #fff;
+  border-color: #333;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled).active:focus, .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 .2rem #006747;
 }
 
 /* CSS for date picker */
@@ -61,9 +76,9 @@
   background-color: #e6e6e6;
 }
 .custom-day.range, .custom-day:hover {
-  background-color: rgb(2, 117, 216);
+  background-color: #006747;
   color: white;
 }
 .custom-day.faded {
-  background-color: rgba(2, 117, 216, 0.5);
+  background-color: #4ba589;
 }
